<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:adjustViewBounds="true"
            android:src="@drawable/women_with_computer" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:paddingLeft="16dp"
            android:paddingRight="16dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/title"
                android:textSize="32sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/question1"
                android:textSize="24sp" />

            <EditText
                android:id="@+id/answer1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/type_your_answer_here"
                android:inputType="text"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/question2"
                android:textSize="24sp" />

            <CheckBox
                android:id="@+id/wd40"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/wd40_cable"
                android:textAppearance="?android:textAppearanceMedium" />

            <CheckBox
                android:id="@+id/ethernet"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ethernet_cable"
                android:textAppearance="?android:textAppearanceMedium" />

            <CheckBox
                android:id="@+id/cat5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/cat5_cable"
                android:textAppearance="?android:textAppearanceMedium" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/question3"
                android:textSize="24sp" />

            <RadioGroup
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <RadioButton
                    android:id="@+id/yes_radio_button1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:onClick="onRadioButtonClicked"
                    android:text="@string/correct"
                    android:textAppearance="?android:textAppearanceMedium" />

                <RadioButton
                    android:id="@+id/no_radio_button1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:onClick="onRadioButtonClicked"
                    android:text="@string/incorrect"
                    android:textAppearance="?android:textAppearanceMedium" />
            </RadioGroup>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/question4"
                android:textSize="24sp" />

            <RadioGroup
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <RadioButton
                    android:id="@+id/yes_radio_button2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:onClick="onRadioButtonClicked"
                    android:text="@string/correct"
                    android:textAppearance="?android:textAppearanceMedium" />

                <RadioButton
                    android:id="@+id/no_radio_button2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:onClick="onRadioButtonClicked"
                    android:text="@string/incorrect"
                    android:textAppearance="?android:textAppearanceMedium" />
            </RadioGroup>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/question5"
                android:textSize="24sp" />

            <CheckBox
                android:id="@+id/apple"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/apple"
                android:textAppearance="?android:textAppearanceMedium" />

            <CheckBox
                android:id="@+id/att"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/att"
                android:textAppearance="?android:textAppearanceMedium" />

            <CheckBox
                android:id="@+id/hp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/hp"
                android:textAppearance="?android:textAppearanceMedium" />

            <Button
                android:id="@+id/submit_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="checkScore"
                android:text="@string/submit" />
        </LinearLayout>
    </LinearLayout>
</ScrollView>

